# local_rag_demo

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  _quarto.yml  docker-compose.yaml  langgraph.json  local_rag_demo.ipynb  pyproject.toml
app/: main.py
backend/: rag.py
docs/: index.html  local_rag_demo.html
scripts/: deploy_ui.sh  populate_db.py
