[project]
name = "basic-rag-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "ipykernel>=6.31.0",
    "jinja2>=3.1.6",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.10",
    "langchain-text-splitters>=0.3.11",
    "langchain-weaviate>=0.0.5",
    "weaviate-agents>=1.2.0",
    "weaviate-client>=4.18.3",
    "wikipedia-api>=0.9.0",
]
